cha-pre-live-flux2/cha-eks-5b/namespaces/petana-uat/namespace-petana-uat.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: petana-uat
  name: petana-uat
