cha-pre-live-flux2/cha-eks-5b/namespaces/petana-uat/network-policy-apps.yaml
####################################################
## Allow ingress from petana-uat and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-petana-uat
  namespace: petana-uat
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: petana-uat
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from petana-uat ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-petana-uat
  namespace: petana-uat
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: petana-uat

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: petana-uat
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP


##################################################
## Allow traffic to confluent cloud peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-confluent
  namespace: petana-uat
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.0/16
    ports:
    - port: 443
      protocol: TCP
    - port: 9092
      protocol: TCP

################
## ICIS monitoring ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: petana-uat
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring

## Allow Postgres Server egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-postgres-server
  namespace: petana-uat
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 5432
      protocol: TCP
